# FYT-sentry

./: .gitignore
calibration_config/: calibration.yaml
src/: README.md
src/camera/: CMakeLists.txt  package.xml
src/camera/config/: camera_param.yaml
src/camera/launch/: camera.launch
src/camera/scripts/: video_play.py
src/camera/src/: camera_node.cpp
src/detector/: CMakeLists.txt  package.xml
src/detector/config/: detector_param.yaml
src/detector/include/detector/: armor.hpp  detector.hpp  onnxdetector.hpp  rm_detector_node.hpp
src/detector/launch/: detector.launch
src/detector/scripts/: detector.py
src/detector/scripts/detector/: detect_utils.py  trt_model.py
src/detector/src/: rm_detector_main.cpp  rm_detector_node.cpp
src/detector/src/detector/: detector.cpp  onnxdetector.cpp
src/detector/src/model/: armor.names  armor_gpu.cfg
src/post_processor/: CMakeLists.txt  package.xml
src/post_processor/config/: processor_param.yaml
src/post_processor/include/filters/: extended_kalman_filter.hpp  kalman_filter.hpp  particle_filter.hpp
src/post_processor/include/post_processor/: armor.hpp  pnp_solver.hpp  predictor.hpp  processor_node.hpp  tracker.hpp
src/post_processor/launch/: processor.launch
src/post_processor/src/: processor_main.cpp  processor_node.cpp
src/post_processor/src/filters/: extended_kalman_filter.cpp  kalman_filter.cpp  particle_filter.cpp
src/post_processor/src/pnp_solver/: pnp_solver.cpp
src/post_processor/src/predictor/: predictor.cpp
src/post_processor/src/tracker/: tracker.cpp
src/rm_bringup/: package.xml
src/rm_bringup/config/: general_param.yaml
src/rm_bringup/launch/: bringup.launch  rm_rviz.rviz  rviz.launch
src/rm_interfaces/: CMakeLists.txt  package.xml
src/rm_interfaces/msg/: AllTargets.msg  Armor.msg  Map.msg  Robot.msg  Robots.msg  SerialReceiveMsg.msg  SerialSendMsg.msg  TrackInfo.msg
src/rm_omni/: CMakeLists.txt  package.xml
src/rm_omni/config/: rm_omni.yaml
src/rm_omni/launch/: rm_omni.launch
src/rm_omni/scripts/: detector.py
src/rm_omni/scripts/model/: FastestDetcolor.onnx
src/rm_omni/src/: rm_omni_node.cpp
src/serial/: CMakeLists.txt  package.xml
src/serial/config/: serial_param.yaml
src/serial/include/serial/: fixed_packet.hpp  fixed_packet_tool.hpp  robot_base_node.hpp  transporter_interface.hpp  uart_transporter.hpp
src/serial/launch/: serial.launch
src/serial/scripts/: virtual_serial.py
src/serial/src/: robot_base_main.cpp  robot_base_node.cpp
src/serial/src/transporter_driver/: uart_transporter.cpp
src/utils/include/: utils.hpp
